JVM crashes when heavyweight monitors are used

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs21
    • Affects Version/s: hs16, 6
    • Component/s: hotspot
    • None
    • b43
    • 6
    • b03
    • generic
    • generic
    • Verified

        There is crash when java is started with -XX:+UseHeavyMonitors and Specjbb2005 is executed.
        The issue is NOT reproducible if -XX:-UseBiasedLocking is specified.

        The crash is observed in all modes (-Xint, -Xmixed, -Xcomp).

        Product jvm, -Xmixed crash is:
        ------------------------------
        # Internal Error (synchronizer.cpp:1802), pid=14673, tid=2943716240
        # Error: guarantee(mid->header()->is_neutral(),"invariant")

        Fastdebug jvm, -Xmixed crash is:
        --------------------------------
        # Internal Error (/BUILD_AREA/jdk7/hotspot/src/share/vm/runtime/synchronizer.cpp:1276), pid=16472, tid=2934336400
        # Error: assert(lock != mark->locker(),"must not re-lock the same lock")

        Fastdebug jvm, -Xint, Xcomp crash is:
        -------------------------------------
        # Internal Error (/BUILD_AREA/jdk7/hotspot/src/share/vm/runtime/synchronizer.cpp:1223), pid=17297, tid=4143336336
        # Error: assert(!object->mark()->has_bias_pattern(),"should not see bias pattern here")
        #

              Assignee:
              Coleen Phillimore
              Reporter:
              Ekaterina Pavlova
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: