6840152: JVM crashes when heavyweight monitors are used

Turn off biased locking if !UseFastLocking or UseHeavyMonitors options are requested.

Reviewed-by: phh, never, dcubed, dholmes